# GameOfLife

./: .gitignore  CImg.h  CMakeLists.txt  Circle.cpp  GameBoard.cpp  GameBoard.h  Patterns.h  Point.cpp  Polygon.cpp  Polygon.h  Quadrangle.cpp  Quadrangle.h  README.md  Shape.h  main.cpp
src/: Circle.h  Common.hpp  GameBoard.cpp  GameBoard.h  GameController.cpp  GameController.h  GameOfLife.cpp  GameOfLife.h  Patterns.cpp  Patterns.h  Point.h  Polygon.h  Shape.h  Stopwatch.cpp  Stopwatch.h  main.cpp
